# penrose-from-scratch

./: Cargo.toml  Makefile  README.md  penrose-from-scratch.desktop  penrose.desktop  progress-so-far.md  progress.sh
diagrams/: tree.dot
examples/: layout-test.rs  state-extensions.rs
scripts/: penrose-startup.sh
src/: bar.rs  bindings.rs  layouts.rs  lib.rs  main.rs
